desc alignment issue fix

--- a/src/app/wca/pages/create-course/create-course.component.scss
+++ b/src/app/wca/pages/create-course/create-course.component.scss
@@ -532,7 +532,7 @@ input[type="text"] {
 }
 
 .inputs3 {
-    padding: 0px 0px 0px 0px;
+    padding: 16px 0px 2px 8px;
     border-radius: 5px;
     background: #e3ecff;
     width: 105%;
